--- a/firstpage.html
+++ b/firstpage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>云顶老八的计算器</title>
     <style>
         * {
             padding: 0;
@@ -20,18 +20,22 @@
             background-color: #1c1c27;
             display: flex;
             align-items: center;
-            height: 120vh;
+            height: 100vh;
         }
 
         .shell {
-            width: 100%;
-            height: 400px;
+            width: 90%;
+            height: 500px;
             display: flex;
             transition: .5s;
+            margin: 0px;
+            transform: translateY(40px);
+
         }
 
         .shell:hover {
-            height: 500px;
+            height: 600px;
+            width: 100%;
             display: flex;
         }
 
@@ -39,10 +43,10 @@
             flex: 1;
             overflow: hidden;
             transition: .5s;
-            margin: 0 20PX;
+            margin: 50px;
             box-shadow: 10px 10px 20px rgba(0, 0, 0, .5);
-            border-radius: 20px;
-            border: 10px solid #fff;
+            border-radius: 15px;
+            border: 5px solid #fff;
             background-color: #fff;
 
         }
@@ -56,7 +60,9 @@
         }
 
         .box>span {
-            font: 200 45px '优设标题黑';
+            font: 300 45px '微软雅黑';
+            font-weight: bold;
+            color: rgb(80, 176, 212);
             text-align: center;
             height: 15%;
             display: flex;
@@ -78,7 +84,7 @@
 </head>
 
 <body>
-    <a href="#">
+    <a href="../caculator/page.html">
         <div class="shell">
 
             <div class="box">
