--- a/firstpage.html
+++ b/firstpage.html
@@ -84,7 +84,7 @@
 </head>
 
 <body>
-    <a href="../caculator/page.html">
+    <a href="caculator/page.html">
         <div class="shell">
 
             <div class="box">
@@ -93,7 +93,7 @@
             </div>
         </div>
     </a>
-    <a href="#">
+    <a href="xiagu/hujia.html">
         <div class="shell">
 
             <div class="box">
@@ -102,7 +102,7 @@
             </div>
         </div>
     </a>
-    <a href="#">
+    <a href="yunding/faqiu.html">
         <div class="shell">
 
             <div class="box">
