--- a/xiagu/hujia.html
+++ b/xiagu/hujia.html
@@ -21,10 +21,14 @@
             str1 = document.getElementById("text");
             str2 = document.getElementById("output");
             result = eval(str1.value);
-            str2.value = (result * 100) / (result + 100);
-            result = str2.value;
-            result = Math.round(result);
-            str2.value = result
+            if (result < 0) {
+                str2.value = "输入值无效"
+            } else {
+                str2.value = (result * 100) / (result + 100);
+                result = str2.value;
+                result = Math.round(result);
+                str2.value = result
+            }
         }
         function reset()	//清除
         {
@@ -78,25 +82,30 @@
         <div class="div_nav">
             <ul>
                 <li>
-                    <a href="#">标准计算器</a>
+                    <a href="../caculator/page.html">标准计算器</a>
                 </li>
                 <li>
-                    <a href="#">召唤师峡谷</a>
+                    <a href="../xiagu/hujia.html">召唤师峡谷</a>
                     <ul class="second">
-                        <li><a href="#">第二层菜单</a></li>
+                        <li><a href="../xiagu/hujia.html">护甲转换</a></li>
+                        <li><a href="../xiagu/mokang.html">魔抗转换</a></li>
+                        <li><a href="../xiagu/jinengjisu.html">技能极速转换</a></li>
+                        <li><a href="../xiagu/shuxing.html">装备面板属性价值</a></li>
+                        <li><a href="../xiagu/nanqiang.html">打野脏兵指南</a></li>
+                        <li><a href="../sudu/yidong.html">移动速度</a></li>
+                        <li><a href="../sudu/gongsu.html">攻击速度</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#">云顶之弈</a>
                     <ul class="second">
-                        <li><a href="#">第二层菜单</a></li>
-                        <li><a href="#">第二层菜单</a></li>
+                        <li><a href="../yunding/faqiu.html">法球价值</a></li>
+                        <li><a href="../yunding/kouxue.html">小小英雄血量损失</a></li>
                     </ul>
                 </li>
                 <li>
-                    <a href="../our-first-web/firstpage.html">返回主页面</a>
+                    <a href="../firstpage.html">返回主页面</a>
                 </li>
-
             </ul>
         </div>
 </body>
